<resources>

    <string name="app_name">ShareImageApp</string>

    <!--    StringExtra -->
    <string name="StringExtrapostid">postid</string>
    <string name="StringExtrapublisherid">publisherid</string>
    <string name="StringExtraprofileid">profileid</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <!--    StringExtra -->

    <!--    Translate-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="post">POST</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="log_in">Log in</string>
    <string name="search">Search…</string>
    <string name="view_all_20_comments">View All 20 Comments</string>
    <string name="change_theme_dark_light">Change theme Dark/Light</string>
    <string name="change_language">Change Language</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="cantRegister">You can\'t register with this email or password.</string>
    <string name="Pleasewait">Please wait…</string>
    <string name="Authenticationfailed">Authentication failed!</string>
    <string name="Allfilesarerequired">All files are required!</string>
    <string name="LoggedSuccessfully">Logged Successfully…</string>
    <string name="Failed">Failed…</string>
    <string name="NoImageselected">No Image selected…</string>
    <string name="Passwordmusthave6characters">Password must have 6 characters…</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="POST">POST</string>
    <string name="Comments">Comments</string>
    <string name="canysendemptycomment">You can\'t send empty comment…</string>
    <string name="Posting">Posting…</string>
    <string name="ViewAllComments">View All\u0020</string>  <!--   \u0020 Space-->
    <string name="_Comments">\u0020Comments</string>
    <string name="_likes">\u0020likes"</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="posts_info">Posts Info</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark mode</string>
    <string name="add_post">Add Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="follow">follow</string>
    <string name="following">following</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="savedPost">This Post has been saved to your Profile</string>
    <string name="deleteSavedPost">This Post has been deleted from your Profile</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="change_photo">Change Photo</string>
    <string name="bio">Bio</string>
    <string name="Uploading">Uploading…</string>
    <string name="updated">Updated Successfully</string>
    <string name="Save">Saved</string>
    <string name="log_out">Log out</string>
    <string name="logged_out">Logged out Successfully</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="constraint">CONSTRAINT</string>
    <string name="saturation">SATURATION</string>
    <string name="filter_name">FILTER NAME</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="options">Options</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
