<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">
        <menu>

            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home48x48"
                android:title="@string/home" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings48x48"
                android:title="@string/settings" />
            <item
                android:id="@+id/edit_profile"
                android:icon="@drawable/ic_edit_profile48x48"
                android:title="@string/edit_profile" />

            <item
                android:id="@+id/photo_editor"
                android:icon="@drawable/ic_photo_editor48x48"
                android:title="@string/photo_editor" />

        </menu>

    </item>

    <item android:title="@string/posts_info">
        <menu>

            <item
                android:id="@+id/add_post"
                android:icon="@drawable/ic_add_post"
                android:title="@string/add_post" />
            <item
                android:id="@+id/notifications"
                android:icon="@drawable/ic_likes_nav"
                android:title="@string/notifications" />

        </menu>

    </item>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout48x48"
                android:title="@string/log_out" />

        </menu>

    </item>

</menu>