<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:background="?attr/backgroundColor"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logo"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/login"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_background"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_background"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/darkModeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/textColor"
        android:text="@string/enable_dark_mode"
        />

    <Button
        android:id="@+id/change_language"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textSize="10sp"
        android:padding="2dp"
        android:text="@string/change_language"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_background"
        tools:ignore="SmallSp" />

</LinearLayout>