<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:textColor="?attr/textColor"
                    android:textStyle="bold"
                    android:id="@+id/username"/>

                <ImageView
                    android:id="@+id/options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_options48x48"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top_bar"
                android:padding="16dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="4dp"
                    android:layout_height="80dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?attr/textColor"
                                android:layout_gravity="center"
                                android:text=""
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?attr/textColor"
                                android:text="@string/posts"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/followers"
                                android:textColor="?attr/textColor"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="?attr/textColor"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?attr/textColor"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:id="@+id/following"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="?attr/textColor"/>

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/edit_profile"
                        android:background="@drawable/button_black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:id="@+id/mid_bar"
                android:layout_below="@id/top_bar"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/fullname"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/textColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/bio"
                    android:maxLines="5"
                    android:textColor="?attr/textColor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mid_bar"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:id="@+id/last_bar"
                android:background="@drawable/button_black"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/my_fotos"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_album48x48"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/saved_fotos"
                    android:src="@drawable/ic_savedcolor48x48"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_bar"
                android:id="@+id/recycler_view"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_bar"
                android:visibility="gone"
                android:id="@+id/recycler_view_save"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>